--- a/styles..css
+++ b/styles..css
@@ -17,6 +17,54 @@
     font-family: var(--font-family-paragraph);
 }
 
+
+body {
+    overflow: hidden;
+}
+
+.preloader{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(whitesmoke,#6f42c1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    opacity: 1;
+    visibility: visible;
+    transition:opacity 2s ease-in-out, visibility 2s ease-in-out;
+    -webkit-transition: 2s ease-in-out;
+}
+
+.preloader.hidden {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.spinner {
+    animation: 2s scaling ease-out infinite;
+}
+
+@keyframes scaling {
+    0%{
+        transform: scale(1);
+    }
+    25%{
+        
+    }
+    50%{
+        transform: scale(2);
+    }
+    100%{
+        transform: scale(1) rotate(360deg);
+    }
+
+
+}
+
 nav {
     background-color: var(--header-colour);
 }
@@ -159,8 +207,6 @@ h5 span {
 }
 
 
-
-
 .img-wrap{
     display: flex;
 }
@@ -175,22 +221,20 @@ h5 span {
 }
 
 
-.flx1-item ul li p i{
+.flx1-item span p i{
   padding: 0 0.3em 0 0;
 }
 
-.flx1-item ul {
-    list-style: none;
-}
 
 
-.flx2 ul li p i{
+.flx2 span p i{
   padding: 0 0.3em 0 0;
 }
 
-.flx2 ul {
-    list-style: none;
+.flx2{
+    margin: 0 0 0 0.5em;
 }
+
 
 .flx-container {
     display: flex;
@@ -401,6 +445,7 @@ h5 span {
 
     .finance {
     margin: 0;
+    padding: 1em;
   } 
 
     .finance-head-item {
